--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vuex-rxjs",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "description": "A type-safe Vuex alternative utilizing RxJS; Compatible with Vue Devtools",
     "author": "manuelsch",
     "license": "MIT",
@@ -25,7 +25,7 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsc",
-        "pre-publish": "npm run build && (for %i in (vuex-rxjs*.tgz) do (del %i)) && npm pack && (if exist \"./package\" rmdir \"./package\" /s /q) && (for %i in (vuex-rxjs*.tgz) do (tar -xzf %i))"
+        "pre-publish": "npm run build && (for %i in (vuex-rxjs*.tgz) do (del %i)) && npm pack && (if exist \"./package\" rmdir \"./package\" /s /q) && (for %i in (vuex-rxjs*.tgz) do (tar -xzf %i)) && (for %i in (vuex-rxjs*.tgz) do (del %i))"
     },
     "peerDependencies": {
         "rxjs": "^6.3.3"
